# dsti_mlops_labs

./: .coverage  .gitignore  README.md  data.dvc  predict_model_locally.py  pyproject.toml  requirements.txt
.dvc/: config
.github/: CODEOWNERS
.github/workflows/: deploy.yml  model_evaluation.yaml  pylint.yml  tests.yml
data/01_raw/: winequality_red.txt.dvc
notebooks/: dvc_python_sdk_explore.ipynb
notebooks/experiment_tracking/: initial_elasticnet.ipynb  mlruns.dvc
src/: Dockerfile
src/dsti_mlops_labs/registration/: registration.py
src/dsti_mlops_labs/wine_dataset_modeling/: wine_linear_regression_test.py
tests/registration/: .coverage  test_registration.py
tests/unit_testing_best_practice/: test_sample.py
tests/unit_testing_simple/: test_sample.py
wine_app/: .dockerignore  Dockerfile  main.py  model.py
wine_app/model_files/: metrics.txt.dvc  model.bin.dvc  model.py
